--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 28 Dec 2006
+  Last Modified: 1 Feb 2007
   Number: 12
-  Version: 35
+  Version: 36
 
 =head1 Overview
 
@@ -231,8 +231,8 @@ The method name may also be quoted with either single or double quotes:
 The latter is especially useful for postfix forms that might be confusing
 to the lexer or to the human reader:
 
-    $filename.'-e'      # same as -e $filename.
-    .'-e'               # same as -e $_
+    $filename.'+'      # same as +$filename.
+    .'+'               # same as +$_
 
 And in fact, if there is a choice between a unary prefix and a postfix
 operator, the indirect forms will choose the prefix operator.  See S03.
