--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 2 Feb 2007
+  Last Modified: 3 Feb 2007
   Number: 12
-  Version: 37
+  Version: 38
 
 =head1 Overview
 
@@ -617,18 +617,18 @@ were methods.  When you say:
 
 it actually calls
 
-    $filehandle.TEST(:e)
-    $filehandle.TEST(:!x)
+    $filehandle.STATUS(:e)
+    $filehandle.STATUS(:!x)
 
 which is expected to return a value that can be used as a boolean.
 While this is primarily intended for use by file tests, other classes
-may define a C<TEST> method to provide a similar mechanism for interrogating
+may define a C<STATUS> method to provide a similar mechanism for interrogating
 lightweight properties without having to define methods for all of them.
 
 Note, though, that I<all> such queries are answered by the first located
-C<TEST> method--they are not inherited independently.  The C<TEST> method
+C<STATUS> method--they are not inherited independently.  The C<STATUS> method
 must explicitly pass the query on to other classes in such cases.  Likewise,
-if conflicting C<TEST> methods are composed from two different roles, they
+if conflicting C<STATUS> methods are composed from two different roles, they
 must be disambiguated as any other conflicting method would be.
 
 Depending on the class, the pairs in question may have arguments.
