categories now allow multiple dispatch via longest-token rule added :<symbol> syntax to rules and tokens seems a bit odd to call list-associative operators "binary"
git-svn-id: http://svn.pugscode.org/pugs@23724 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -38,8 +38,8 @@ levels. (Perl 5 has 23!)  Here we list the levels from "tightest" to
     Junctive and (all)  &
     Junctive or (any)   | ^
     Named unary         rand sleep abs
-    Nonchaining binary  but does <=> leg cmp .. ..^ ^.. ^..^ ff fff
-    Chaining binary     != == < <= > >= eq ne lt le gt ge ~~ === eqv !eqv
+    Nonchaining infix   but does <=> leg cmp .. ..^ ^.. ^..^ ff fff
+    Chaining infix      != == < <= > >= eq ne lt le gt ge ~~ === eqv !eqv
     Tight and           &&
     Tight or            || ^^ // min max
     Conditional         ?? !!
