$obj.Foo::bar is also okay syntax if Foo declared
git-svn-id: http://svn.pugscode.org/pugs@23726 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -12,9 +12,9 @@ Luke Palmer <luke@luqui.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 8 Mar 2004
-  Last Modified: 3 Feb 2007
+  Last Modified: 5 Feb 2007
   Number: 3
-  Version: 97
+  Version: 99
 
 =head1 Overview
 
@@ -245,6 +245,7 @@ the same name are handled.
 Class-qualified method call
 
     $obj.::Class::meth
+    $obj.Class::meth    # same thing, assuming Class is predeclared
 
 =item *
 
