--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -14,9 +14,9 @@ Allison Randal <al@shadowed.net>
    Maintainer: Patrick Michaud <pmichaud@pobox.com> and
                Larry Wall <larry@wall.org>
    Date: 24 Jun 2002
-   Last Modified: 5 Feb 2007
+   Last Modified: 8 Feb 2007
    Number: 5
-   Version: 50
+   Version: 51
 
 This document summarizes Apocalypse 5, which is about the new regex
 syntax.  We now try to call them I<regex> rather than "regular
@@ -670,23 +670,30 @@ assuming we make the C<@:> contextualizer govern only the next token.
 
 =item *
 
-Alternatively, if you predeclare a category, you can write multiple
-rules for the same category, differentiated only by the symbol they
+Alternatively, if you predeclare a proto regex, you can write multiple
+regexes for the same category, differentiated only by the symbol they
 match:
 
-    category sigil;
-    token sigil { :<$> }
-    token sigil { :<@> }
-    token sigil { :<@@> }
-    token sigil { :<%> }
-    token sigil { :<&> }
-    token sigil { :<::> }
+    proto token sigil;
+    multi token sigil { :<$> }
+    multi token sigil { :<@> }
+    multi token sigil { :<@@> }
+    multi token sigil { :<%> }
+    multi token sigil { :<&> }
+    multi token sigil { :<::> }
+
+(The C<multi> is optional and generally omitted with a grammar.)
 
 This can be viewed as a form of multiple dispatch, except that it's
 based on longest-token matching rather than signature matching.  The
 advantage of writing it this way is that it's easy to add additional
 rules to the same category in a derived grammar.  All of them will
 be matched in parallel when you try to match C<< /<sigil>/ >>.
+
+If there are formal parameters on multi regex methods, matching
+still proceeds via longest-token rules first.  If that results in a
+tie, a normal multiple dispatch is made using the arguments to the
+remaining variants, assuming they can be differentiated by type.
 
 =item *
 
