typo from dataweaver++
git-svn-id: http://svn.pugscode.org/pugs@23732 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -2612,7 +2612,7 @@ is equivalent to
 
     @result = @x.grep:{...};
 
-However, this I<list() comprehension> is strictly a syntactic transformation,
+However, this I<each() comprehension> is strictly a syntactic transformation,
 so a list computed any other way will not triger the rewrite:
 
     @result = (@x = each(@y)) ~~ {...}; # not a comprehension
