--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -2613,7 +2613,7 @@ is equivalent to
     @result = @x.grep:{...};
 
 However, this I<each() comprehension> is strictly a syntactic transformation,
-so a list computed any other way will not triger the rewrite:
+so a list computed any other way will not trigger the rewrite:
 
     @result = (@x = each(@y)) ~~ {...}; # not a comprehension
 
